# bio-nerd-tool

./: .gitignore  README.md  download.sh  gget_cli.py  gget_mcp_cli.py  pyproject.toml
config/: README.md  claude_desktop_config.json  lm_studio_config.json  ollama_config.py
docs/: BUILDING_GUIDE.md
gget_mcp/: __init__.py  server.py  server_simple.py
gget_mcp/ai/: __init__.py
gget_mcp/nlp/: __init__.py  query_processor.py
gget_mcp/safety/: __init__.py  boundaries.py  epistemic.py  failures.py  provenance.py
gget_mcp/schemas/: __init__.py  inputs.py  outputs.py
gget_mcp/tools/: __init__.py  gget_info.py  nl_gene_query.py
tests/: __init__.py  test_safety_boundaries.py
